--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
   </distributionManagement>
 
   <build>
+    <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+       <artifactId>maven-war-plugin</artifactId>
+       <version>3.3.1</version>
+    </plugin>       
     <plugins>
       <!--plugin>
         <artifactId>maven-compiler-plugin</artifactId>
